fix theme flickering on route change

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,6 @@
 @import url('@fontsource/m-plus-rounded-1c/500.css');
 @import url('@fontsource/m-plus-rounded-1c/700.css');
 
-@font-face {
-  display: swap;
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
